# CIS314

./: .gitignore  handlingProcessing.py  rngCompareSort.py  test.py
assignments/: dataStructures.py  dateTime.py  gui.py  handlingProcessing.py  looping.py
final project/: LICENSE  README.md  README_PokeBattle.md  app.py  pyproject.toml
final project/core/: battle_engine.py  damage.py  json_loaders.py  models.py
final project/data/: monsters.json  move_learners.json  moves.json  type_chart.json
final project/utils/: pokeapi_loader.py
genAI_assignment/PokeBattle_FullProject/PokeBattle/: data_parser.py  poke_engine.py  pokebattle.py
genAI_assignment/PokeBattle_FullProject/PokeBattle/configs/: creatures.cfg  moves.cfg
midterm project/: README_Pocket_Monsters.md  main.py
midterm project/data/: gen1_creatures.txt  gen1_monsters.txt
midterm project/helpers/: random_moves_for_dex.py
midterm project/src/: battle.py  damage.py  loaders.py  models.py
midterm project_v1/: LICENSE  README_Pocket_Monsters.md  pyproject.toml
midterm project_v1/data/: gen1_moves.txt  move_learners.json
midterm project_v1/saves/battles/: 20251010_230158_battle_011_vs_038.json
midterm project_v1/saves/slots/: autosave.json
midterm project_v1/src/: battle.py  loaders.py  models.py  persist.py
