[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cis314-final"
version = "1.0.0"
authors = [
    { name = "Lynda Flygare", email = "lynda.flygare@gmail.com" },
]
description = "CIS 314 final project: Gen 1 Pokemon team abttle simulator with Streamlit UI"
readme = "README_PokeBattle.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",  
    "Operating System :: OS Independent",
]

dependencies = [
    "streamlit", 
    "requests", 
]

#---build configuration---

#goes into tar.gz
[tool.hatch.build.targets.sdist]
include = [
    "app,py", 
    "core", 
    "utils", 
    "data", 
    "LICENSE", 
    "README_PokeBattle.md", 
]

#goes into .whl
[tool.hatch.build.targets.wheel]
packages = ["core", "utils"]

#force json data into wheel
[tool.hatch.build.targets.wheel.force-include]
"data" = "data"