[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cis314-midterm"
version = "0.1.0"
authors = [
    { name = "Lynda Flygare", email = "lynda.flygare@gmail.com" },
]
description = "CIS 314 midterm project packaged as reusable Python module."
readme = "README_Pocket_Monsters.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent", 
]

#3P libraries
dependencies = []

#---build configuration---

#goes into tar.gz
[tool.hatch.build.targets.sdist]
include = [
    "src", 
    "data", 
    "saves", 
    "LICENSE", 
    "README_Pocket_Monsters.md", 
    "main.py", 
]

#goes into .whl
[tool.hatch.build.targets.wheel]
packages = ["src"]

#bundle data and save directories into wheel
[tool.hatch.build.targets.wheel.force-include]
"data" = "src/data"
"saves" = "src/saves"